--- a/WebsitePages/blog.html
+++ b/WebsitePages/blog.html
@@ -37,19 +37,19 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-danger" href="http://127.0.0.1:5500/index.html">Home</a>
+                        <a class="nav-link text-danger" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-danger" href="http://127.0.0.1:5500/Login.html">Login</a>
+                        <a class="nav-link text-danger" href="Login.html">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-danger" href="http://127.0.0.1:5500/blog.html">Blog</a>
+                        <a class="nav-link text-danger" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-danger" href="Kodunetoo/Products.html">Products</a>
+                        <a class="nav-link text-danger" href="Products.html">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-danger" href="http://127.0.0.1:5500/Contact.html">Contact</a>
+                        <a class="nav-link text-danger" href="Contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
