--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-danger" href="index.html">Home</a>
+                        <a class="nav-link text-danger" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-danger" href="Login.html">Login</a>
+                        <a class="nav-link text-danger" href="WebsitePages/Login.html">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-danger" href="blog.html">Blog</a>
+                        <a class="nav-link text-danger" href="WebsitePages/blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-danger" href="Products.html">Products</a>
+                        <a class="nav-link text-danger" href="WebsitePages/Products.html">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-danger" href="Contact.html">Contact</a>
+                        <a class="nav-link text-danger" href="WebsitePages/Contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
