--- a/WebsitePages/Contact.html
+++ b/WebsitePages/Contact.html
@@ -48,16 +48,26 @@
     <nav class="navbar navbar-expand-lg bg-info">
         <div class="container">
             <a class="navbar-brand text-danger fw-bold" href="#">Going Out of Business!</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link text-danger" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-danger" href="Login.html">Login</a></li>
-                    <li class="nav-item"><a class="nav-link text-danger" href="blog.html">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link text-danger" href="Products.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link text-danger" href="http://127.0.0.1:5500/Contact.html">Contact</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="Login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="Products.html">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="Contact.html">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
