--- a/WebsitePages/Products.html
+++ b/WebsitePages/Products.html
@@ -46,11 +46,21 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link text-danger" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-danger" href="Login.html">Login</a></li>
-                    <li class="nav-item"><a class="nav-link text-danger" href="blog.html">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link text-danger" href="Products.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link text-danger" href="http://127.0.0.1:5500/Contact.html">Contact</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="Login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="Products.html">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="Contact.html">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
