--- a/WebsitePages/blog.html
+++ b/WebsitePages/blog.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
-    
     <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/bootstrap.js"></script>
     
     <style>
         body {
@@ -37,16 +37,26 @@
     <nav class="navbar navbar-expand-lg bg-info">
         <div class="container">
             <a class="navbar-brand text-danger fw-bold" href="#">Going Out of Business!</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link text-danger" href="../index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-danger" href="Login.html">Login</a></li>
-                    <li class="nav-item"><a class="nav-link text-danger" href="blog.html">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link text-danger" href="Products.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link text-danger" href="Contact.html">Contact</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="Login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="Products.html">Products</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" href="Contact.html">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
